docs/compilation/v1.9.1/_sources/pages/modules/sinergym.utils.wrappers.LoggerWrapper.rst.txt
sinergym.utils.wrappers.LoggerWrapper
=====================================

.. currentmodule:: sinergym.utils.wrappers

.. autoclass:: LoggerWrapper
   :members:                                                           
   :undoc-members:               

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~LoggerWrapper.__init__
      ~LoggerWrapper.activate_logger
      ~LoggerWrapper.class_name
      ~LoggerWrapper.close
      ~LoggerWrapper.compute_reward
      ~LoggerWrapper.deactivate_logger
      ~LoggerWrapper.render
      ~LoggerWrapper.reset
      ~LoggerWrapper.seed
      ~LoggerWrapper.step
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~LoggerWrapper.action_space
      ~LoggerWrapper.metadata
      ~LoggerWrapper.observation_space
      ~LoggerWrapper.reward_range
      ~LoggerWrapper.spec
      ~LoggerWrapper.unwrapped
   
   