docs/compilation/v2.5.0/_sources/pages/modules/sinergym.utils.wrappers.LoggerWrapper.rst.txt
sinergym.utils.wrappers.LoggerWrapper
=====================================

.. currentmodule:: sinergym.utils.wrappers

.. autoclass:: LoggerWrapper
   :members:                                                           
   :undoc-members:               

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~LoggerWrapper.__init__
      ~LoggerWrapper.activate_logger
      ~LoggerWrapper.class_name
      ~LoggerWrapper.close
      ~LoggerWrapper.deactivate_logger
      ~LoggerWrapper.get_wrapper_attr
      ~LoggerWrapper.has_wrapper_attr
      ~LoggerWrapper.render
      ~LoggerWrapper.reset
      ~LoggerWrapper.set_wrapper_attr
      ~LoggerWrapper.step
      ~LoggerWrapper.wrapper_spec
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~LoggerWrapper.action_space
      ~LoggerWrapper.metadata
      ~LoggerWrapper.np_random
      ~LoggerWrapper.np_random_seed
      ~LoggerWrapper.observation_space
      ~LoggerWrapper.render_mode
      ~LoggerWrapper.spec
      ~LoggerWrapper.unwrapped
   
   